# lutica-history

./: .gitignore  GEMINI.md  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
messages/: en.json  ja.json  ko.json
rust_renderer/: Cargo.toml
rust_renderer/src/: lib.rs  shader.wgsl
src/: worker-configuration.d.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/card/: +page.svelte
src/routes/demo/paraglide/: +page.svelte
